# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: githab-actions.yml
loader/: network.py
page_loader/: __init__.py  download.py  file_saver.py  html_parser.py  loader.py  logger.py  name_formatter.py
page_loader/scripts/: start_page_loader.py
tests/: file_reader.py  test_download_page.py  test_loader.py
