[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Aleksandr Shpynev <spikers@inbox.ru>"]

[tool.poetry.dependencies]
python = "3.9.13"
pytest-cov = "^3.0.0"
pytest = "^7.1.2"
flake8 = "^5.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
