[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Aleksandr Shpynev <spikers@inbox.ru>"]
packages = [
    { include = "loader" },
]

[tool.poetry.dependencies]
python = "3.9.13"
pytest-cov = "^3.0.0"
pytest = "^7.1.2"
flake8 = "^5.0.4"
requests = "^2.28.1"
click = "^7.0"
beautifulsoup4 = "^4.8.2"
tqdm = "^4.51.0"

[tool.poetry.dev-dependencies]
pytest-mock = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
